# registro

./: Cargo.toml  README.md
src/: main.rs
src/data/: registro.json
src/db/: mod.rs
src/db/migrations/: create_table.sql
src/model/: mod.rs
