[package]
name = "final-proyecto"
version = "0.1.0"
authors = ["byron andy <andycna@hotmail.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "rest-api"
path = "src/main.rs"


[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]


[dependencies]
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres= {version = "0.19", features = ["with-chrono-0_4"]}
postgres-types= {version = "0.2", features = ["derive"]}
r2d2 = "0.8.8"
r2d2_postgres = "0.18.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

